--- a/k8s/url-shortener-deployment.yaml
+++ b/k8s/url-shortener-deployment.yaml
@@ -32,5 +32,7 @@ spec:
         resources:
           requests:
             cpu: "100m"
+            memory: "128Mi"
           limits:
             cpu: "200m"
+            memory: "256Mi"
