--- a/k8s/HPA.yaml
+++ b/k8s/HPA.yaml
@@ -6,7 +6,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: url-shortener  # ← Targets your deployment
+    name: url-shortener
   minReplicas: 1
   maxReplicas: 10
   metrics:
